[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/login and menus/ReadyScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/carlos portrait.png" type="Texture" id=3]
[ext_resource path="res://fonts/cmu-typewriter/Typewriter.tres" type="DynamicFont" id=4]

[node name="ReadyScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel3" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 21.0
margin_top = 27.0
margin_right = 252.0
margin_bottom = 172.0

[node name="selector" type="Node2D" parent="."]
position = Vector2( -1728, -704 )

[node name="ColorRect" type="ColorRect" parent="selector"]
margin_left = -9.0
margin_top = -8.0
margin_right = 55.0
margin_bottom = 128.0
color = Color( 0.188235, 0.658824, 0.105882, 1 )

[node name="Button" type="Button" parent="."]
margin_left = 64.0
margin_top = 448.0
margin_right = 231.0
margin_bottom = 501.0
custom_colors/font_color_disabled = Color( 0.85098, 0.737255, 0, 1 )
custom_colors/font_color = Color( 0.85098, 0.737255, 0, 1 )
custom_colors/font_color_hover = Color( 0.85098, 0.737255, 0, 1 )
custom_colors/font_color_pressed = Color( 0.85098, 0.737255, 0, 1 )
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Lock in!"

[node name="1" type="TextureButton" parent="."]
margin_left = 360.0
margin_top = 40.0
margin_right = 408.0
margin_bottom = 160.0
texture_normal = ExtResource( 3 )
expand = true

[node name="2" type="TextureButton" parent="."]
margin_left = 360.0
margin_top = 192.0
margin_right = 408.0
margin_bottom = 312.0
texture_normal = ExtResource( 3 )
expand = true

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="1" to="." method="_on_1_button_down"]
[connection signal="button_down" from="2" to="." method="_on_2_button_down"]
